// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "isStatic": true,
        "rules": Array [],
      },
      "displayName": "Accordion__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
          "isStatic": true,
          "rules": Array [],
        },
        "displayName": "Accordion__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Accordion Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={true}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={true}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": true,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "isStatic": true,
        "rules": Array [],
      },
      "displayName": "Accordion__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={true}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": true,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
          "isStatic": true,
          "rules": Array [],
        },
        "displayName": "Accordion__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Accordion Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      open={true}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      open={false}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          open={true}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          open={false}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "open": true,
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "open": false,
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "isStatic": true,
        "rules": Array [],
      },
      "displayName": "Accordion__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            open={true}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            open={false}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "open": true,
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "open": false,
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
          "isStatic": true,
          "rules": Array [],
        },
        "displayName": "Accordion__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Accordion Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      open={true}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      open={true}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          open={true}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          open={true}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "open": true,
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "open": true,
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "isStatic": true,
        "rules": Array [],
      },
      "displayName": "Accordion__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            open={true}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            open={true}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "open": true,
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "open": true,
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Accordion__Wrapper-sc-1fl4boc-0",
          "isStatic": true,
          "rules": Array [],
        },
        "displayName": "Accordion__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Accordion__Wrapper-sc-1fl4boc-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
